# mtg-rl

./: .buildinfo  .dockerignore  .env.example  .gitignore  .gitmodules  ARCHITECTURE.html  ARCHITECTURE.md  AWS_DEPLOYMENT.md  CARD_ENCODING.md  CLAUDE.md  CLOUD_ARCHITECTURE.md  CLOUD_TRAINING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.collection  Dockerfile.daemon  Dockerfile.training  FORGE_AI_ANALYSIS.md  FORGE_PERFORMANCE_ANALYSIS.md  MTG_RULES_REFERENCE.html  Makefile  NOTICE  PROFILING_ANALYSIS.md  README.html  SELF_PLAY_README.md  TRAINING_ANALYSIS.md  TRAINING_DEPLOYMENT_PLAN.md  TRAINING_REPORT.md  TRAINING_SPEEDUP.md  TRAINING_STRATEGY.md  TRANSFER_LEARNING.md  WHITEPAPER.md  agent_wrapper.py  analyze_jfr.py  benchmark_1000.py  benchmark_daemon.py  card_embeddings.py  checkpoint_manager.py  daemon_environment.py  data_17lands.py  (+49 more)
.claude/: settings.local.json
.doctrees/: ARCHITECTURE.doctree  MTG_RULES_REFERENCE.doctree  README.doctree  index.doctree  tools.doctree
.githooks/: pre-push
_modules/: index.html
_sources/: ARCHITECTURE.md.txt  MTG_RULES_REFERENCE.md.txt  README.md.txt  index.rst.txt
api/: agents.html  data.html  environments.html  forge.html  mechanics.html  models.html  training.html  utils.html
configs/: sweep_imitation.yaml  wandb_sweep.yaml
decks/: README.md  jeskai_control.dck  mono_red_aggro.dck  red_aggro.dck  white_weenie.dck
docs/: WHITEPAPER.md  conf.py  index.rst  tools.md
infrastructure/: TERRAFORM_VS_AWSCLI.md  budget-notifications.json  budget.json  cost_controls.tf  docker-compose.ci.yml  docker-compose.prod.yml  main.tf  (+6 more)
(+283 files in other folders)
