[project]
name = "forgerl"
version = "0.1.0"
description = "Reinforcement learning system for Magic: The Gathering, built on Forge"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "h5py>=3.9.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.0.0",
    "tensorboard>=2.14.0",
    "gymnasium>=0.29.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "wandb>=0.15.0",
    "matplotlib>=3.7.0",
    "safetensors>=0.4.0",
]
data = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "boto3>=1.28.0",
    "beautifulsoup4>=4.12.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "graphviz>=0.20",
    "watchdog>=4.0.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0",
    "furo>=2024.1.29",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0",
    "furo>=2024.1.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
exclude = ["forge-repo", "wandb"]

[tool.ruff.lint]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
